Avoid feature image cut off on shallow screens

--- a/assets/styles/claris/_components.scss
+++ b/assets/styles/claris/_components.scss
@@ -665,10 +665,12 @@
   &.feature-image {
     &_style {
       &-wide {
-        --aspect-ratio_max: calc(4 / 1);
-        --img-coverage_shallow_max: 0.4;
-        --feature-image_max-width: calc(min((100vh * var(--img-coverage_shallow_max) * var(--aspect-ratio_max)), var(--screenViewFeatureImageWidthMax)));
+        --feature-image_aspect-ratio_max: calc(4 / 1);
+        --screen_aspect-ratiop_max: calc(2 / 1);
+        --img-coverage_shallow_max: calc(var(--screen_aspect-ratiop_max) / var(--feature-image_aspect-ratio_max));
+        --feature-image_max-width: calc(min((100vh * var(--img-coverage_shallow_max) * var(--feature-image_aspect-ratio_max)), var(--screenViewFeatureImageWidthMax)));
         --border_overlap_fraction: 0.1;
+        --transition_factor: 1e9;
         --border_overlap_vw: calc(100vw * var(--border_overlap_fraction));
         .content-title {
           @include content_multicolumn;
@@ -690,13 +692,13 @@
               z-index: ($main-z-index + 3);
               &.left {
                 margin-right: calc( max(
-                  min(0px, var(--feature-image_max-width) + var(--border_overlap_vw) - 100vw, var(--feature-image_max-width) - 100vw) * 1000,
+                  min(0px, var(--feature-image_max-width) - 100vw * (1.01 - var(--border_overlap_fraction))) * var(--transition_factor),
                   -1 * min((var(--border_overlap_vw) / 2), (var(--border_overlap_fraction) / 2) * var(--feature-image_max-width))
                 ) );
               }
               &.right {
                 margin-left: calc( max(
-                  min(0px, var(--feature-image_max-width) + var(--border_overlap_vw) - 100vw, var(--feature-image_max-width) - 100vw) * 1000,
+                  min(0px, var(--feature-image_max-width) - 100vw * (1.01 - var(--border_overlap_fraction))) * var(--transition_factor),
                   -1 * min( (var(--border_overlap_vw) / 2), (var(--border_overlap_fraction) / 2) * var(--feature-image_max-width))
                 ) );
               }
@@ -704,7 +706,7 @@
           }
           &_figure,
           &_img {
-            max-height: calc(var(--feature-image_max-width) / var(--aspect-ratio_max));
+            max-height: calc(var(--feature-image_max-width) / var(--feature-image_aspect-ratio_max));
           }
         }
       }
